--- a/public/services.html
+++ b/public/services.html
@@ -8,7 +8,7 @@
       name="keywords"
       content="web design, affordable web design, professional web design, phoenix ax based web design, affordable web development, wordpress web design, ecommerce web design, ruby on rails web creation and development"
     />
-    <title>Awesome PrymeCreation Websites | About</title>
+    <title>Awesome PrymeCreation Websites | Services</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
@@ -30,8 +30,8 @@
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li class="current"><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="about.html">About</a></li>
+            <li class="current"><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -49,33 +49,52 @@
     <section id="main">
       <div class="container">
         <article id="main-col">
-          <h1 class="page-title">About Us</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur.
-          </p>
+          <p class="page-title">Services</p>
+          <ul id="services">
+            <li>
+              <h3>Website Design</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                varius auctor lacus nec feugiat
+              </p>
+              <p>Pricing: $500 - $2,000</p>
+            </li>
+            <li>
+              <h3>Website Maintenance</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                varius auctor lacus nec feugiat
+              </p>
+              <p>Pricing: $250 per month</p>
+            </li>
+            <li>
+              <h3>Graphic Design</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                varius auctor lacus nec feugiat
+              </p>
+              <p>Pricing: $25 per hour</p>
+            </li>
+          </ul>
         </article>
         <aside id="sidebar">
           <div class="dark">
-            <h3>What We Do</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-              varius auctor lacus nec feugiat. Phasellus sit amet ex ipsum.
-              Praesent pharetra tincidunt tempor. Etiam velit eros, dapibus eget
-              porta in, lacinia et magna
-            </p>
+            <h3>Get a quote</h3>
+            <form class="quote">
+              <div>
+                <label>Name</label><br />
+                <input type="text" placeholder="Name" />
+              </div>
+              <div>
+                <label>Email</label><br />
+                <input type="text" placeholder="Email Address" />
+              </div>
+              <div>
+                <label>Message</label><br />
+                <textarea placeholder="Message"></textarea>
+              </div>
+              <button class="button_1" type="submit">Send</button>
+            </form>
           </div>
         </aside>
       </div>
