Fixed style.css link

--- a/public/about.html
+++ b/public/about.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="./css/styles.css"
+      href="./css/style.css"
     />
     <script src="./js/scripts.js"></script>
   </head>
